fix overflow in both lang

--- a/src/app/share/post/post.component.scss
+++ b/src/app/share/post/post.component.scss
@@ -38,9 +38,7 @@ a{
     padding-top: 1rem;
     opacity: 0;
     transition: opacity 0.3s ease-in-out !important;
-    p{
-      direction: rtl;
-    }
+
   }
 }
 
